change player_1_control by player_0_control ; add gif for the winner ; winner font in red ; game Ok

--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,7 @@
 /dart-sass
 
 # ignore le dossier node modules
-/node_modules
+/images/node_modules
 
 #ignore tous les fichiers paramétrage Json
 *.json
